--- a/docs/src/getting-started/getting-linuxcnc.adoc
+++ b/docs/src/getting-started/getting-linuxcnc.adoc
@@ -350,6 +350,7 @@ sudo ./linuxcnc-install.sh
 ----
 
 [[cha:Installing-RTAI]]
+
 === Installing on Debian Bookworm (with experimental RTAI kernel)
 
 . This kernel and LinuxCNC version can be installed on top of the Live DVD
@@ -363,9 +364,11 @@ sudo ./linuxcnc-install.sh
 ----
 sudo apt-get update
 ----
-. Install the new realtime kernel, RTAI and the RTAI-version of LinuxCNC.
+. Remove the existing uspace version of LinuxCNC and install the new realtime kernel, RTAI and the RTAI-version of LinuxCNC.
 +
 ----
+sudo apt-get purge linuxcnc-uspace
+sudo apt-get purge linuxcnc-doc*
 sudo apt-get install linuxcnc
 ----
 Reboot the machine, ensuring that the system boots from the new 5.4.258-rtai kernel.
