qtdragon -docs: update how to hide the virtual keyboard

--- a/docs/src/gui/qtdragon.adoc
+++ b/docs/src/gui/qtdragon.adoc
@@ -444,7 +444,7 @@ POSTGUI_HALCMD = loadusr halmeter
 ----
 === HAL Bridge
 Hal Bridge is similar to HALUI - it has HAL pins that communicate with QtDragon. +
-These pins could be used with HALUI to built a more frendly control panel. +
+These pins could be used with HALUI to built a more friendly control panel. +
 
 - It can report/change the current selected Axis button. +
 - The jog rate/increments will be reported. +
@@ -512,8 +512,8 @@ To enable the keyboard, check the Use Virtual Keyboard checkbox in the Settings 
 Clicking on any input field, such as probe parameters or tool table entries, will show the keyboard.
 To hide the keyboard, do one of the following:
 
+- press the 'HIDE' button on the virtual keyboard.
 - click the MAIN page button
-- The currently selected page button.
 - go into AUTO mode
 
 It should be noted that keyboard jogging is disabled when using the virtual keyboard.
@@ -1350,9 +1350,10 @@ which then sets the X and Y offsets to the values indicated by the LASER OFFSET 
 == Tabs Description
 
 Tabs allow the user to select the most appropriate info/control on the top three panels.
-If the on screen keyboard is showing and the user wishes to hide it but keep the current tab, they can do that by pressing the current show tab.
+If the on screen keyboard is showing and the user wishes to hide it but keep the current tab, they can do that by pressing the 'HIDE' button on the virtual keyboard.
 In QtDragon, there is a splitter handle between the G-code text display and the G-code graphical display.
 One can use this to split the size between the two areas. This can be set differently in each tab and in each mode.
+The positions will be remembered.
 
 === Main tab
 
