--- a/docs/src/config/core-components.adoc
+++ b/docs/src/config/core-components.adoc
@@ -369,4 +369,18 @@ of commands.
 * 'ini.traj_default_velocity' - (float, in) [TRAJ]DEFAULT_VELOCITY
 * 'ini.traj_max_acceleration' - (float, in) [TRAJ]MAX_ACCELERATION
 
+S-curve trajectory planning pins (sampled continuously, can be changed at runtime):
+
+* 'ini.traj_planner_type' - (s32, in) [TRAJ]PLANNER_TYPE
+* 'ini.traj_max_jerk' - (float, in) [TRAJ]MAX_LINEAR_JERK
+* 'ini.traj_default_jerk' - (float, in) [TRAJ]DEFAULT_LINEAR_JERK
+
+Per-axis jerk limit pins (where _L_ is x, y, z, a, b, c, u, v, or w):
+
+* 'ini._L_.jerk' - (float, in) [AXIS__L_]MAX_JERK
+
+Per-joint jerk limit pins (where _N_ is the joint number 0-8):
+
+* 'ini._N_.jerk' - (float, in) [JOINT__N_]MAX_JERK
+
 // vim: set syntax=asciidoc:
