--- a/docs/src/gui/gladevcp-panels.adoc
+++ b/docs/src/gui/gladevcp-panels.adoc
@@ -19,7 +19,6 @@ There are several *builtin panels* available.
 
 In a terminal type `gladevcp` to see a list.
 
----
 
 === GTK Verser Probe
 A GTK based version of the third party Verser probe.
@@ -30,7 +29,7 @@ image::images/gtk_verser_probe.png["GTK Verser Probe",align="center"]
 This is a version from 2015 by Serguei Glavatski which has **less functionality** than the current, but it **takes up less space on the screen** (no DRO e.g.). 
 This can be useful on smaller displays.
 
-**For Reference - The Current Version**
+**For Reference - The Current Version:**
 
 The documentation and source code of the current version can be found here:
 
@@ -38,8 +37,10 @@ The documentation and source code of the current version can be found here:
  *  https://github.com/verser-git/probe_screen_v2.9
 
 
-**Modification of the INI file to use as embedded panel in Gmoccapy**
-```ini
+**Modification of the INI file to use as embedded panel in Gmoccapy:**
+
+[source,{ini}]
+----
 [DISPLAY]
 DISPLAY = gmoccapy
 EMBED_TAB_NAME = Probe
@@ -55,10 +56,12 @@ SUBROUTINE_PATH = ./macros:/usr/share/linuxcnc/nc_files/gtk_probe/
 
 # For RIP installation, use the path according to your directory:
 # SUBROUTINE_PATH = ./macros:~/linuxcnc/nc_files/probe/gtk_probe/
-```
+----
 
-**Example using dbounce with a Mesa card (HAL file)**
-```hal
+**Example using dbounce with a Mesa card (HAL file):**
+
+[source,{hal}]
+----
 # ---probe signal---
 loadrt dbounce names=dbounce.probe
 addf dbounce.probe   servo-thread
@@ -66,9 +69,8 @@ addf dbounce.probe   servo-thread
 setp dbounce.probe.delay 5
 net probe-db  dbounce.probe.in    <=  hm2_7i96.0.gpio.000.in
 net probe-in  motion.probe-input  <=  dbounce.probe.out
-```
+----
 
----
 === GTK Little Probe
 A GTK based version of the third party Verser probe, modified for a tabbed layout for smaller displays.
 
@@ -77,8 +79,10 @@ image::images/gtk_little_probe.png["GTK little Probe",align="center"]
 This is a modification of the 2015 version of GTK Verser Probe. It moves the elements from one window to containers with switchable vertical tabs. The goal was to reduce the window size.
 
 
-**Modification of the INI file to use as embedded panel in Gmoccapy**
-```ini
+**Modification of the INI file to use as embedded panel in Gmoccapy:**
+
+[source,{ini}]
+----
 [DISPLAY]
 DISPLAY = gmoccapy
 EMBED_TAB_NAME = Probe
@@ -94,12 +98,15 @@ SUBROUTINE_PATH = ./macros:/usr/share/linuxcnc/nc_files/probe/gtk_probe/
 
 # For RIP installation, use the path according to your directory:
 # SUBROUTINE_PATH = ./macros:~/linuxcnc/nc_files/probe/gtk_probe/
-```
-Use only one Probe Screen by Serguei Glavatski in one LCNC configuration.
+----
+
+Use only one such Probe Screen in one LCNC configuration.
 
 
-**Example using dbounce with Mesa card (HAL file)**
-```hal
+**Example using dbounce with a Mesa card (HAL file):**
+
+[source,{hal}]
+----
 # ---probe signal---
 loadrt dbounce names=dbounce.probe
 addf dbounce.probe   servo-thread
@@ -107,8 +114,7 @@ addf dbounce.probe   servo-thread
 setp dbounce.probe.delay 5
 net probe-db  dbounce.probe.in    <=  hm2_7i96.0.gpio.000.in
 net probe-in  motion.probe-input  <=  dbounce.probe.out
-```
----
+----
 
 === GTK Mesa Tests
 This screen allows the user to verify whether they have a suitable and well-tuned PC for their Mesa card.
